<resources>
    <string name="app_name">Stickie</string>
    <string name="start_new">New</string>
    <string name="brush">Brush</string>
    <string name="erase">Erase</string>
    <string name="save">Save</string>
    <string name="paint">Paint</string>
    <string name="connect">Connect</string>
    <string name="disconnect">Disconnect</string>
    <string name="upload">Upload</string>
    <string name="url">https://stickie2-jaskiratr.c9users.io</string>
    <string name="session_hint">Session ID</string>
    <string name="team_hint">Pick a side</string>



    <string name="sml">Small</string>
    <string name="med">Medium</string>
    <string name="lrg">Large</string>

    //Confirmation Dialog
    <string name="request_permission">This sample needs camera permission.</string>
    <string name="camera_error">This device doesn\'t support Camera2 API.</string>

    <string-array name="menu_array">
        <item>Connect</item>
        <item>Disconnect</item>
        <item>Recenter</item>
        <item>Invite</item>
    </string-array>
    <string name="drawer_open">Open navigation drawer</string>
    <string name="drawer_close">Close navigation drawer</string>
    <string name="action_websearch">Web search</string>
    <string name="app_not_available">Sorry, there\'s no web browser available</string>
</resources>

