<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.DrawerLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/drawer_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    >
    <!-- The main content view -->

    <!-- The main content view -->
    <!--<FrameLayout-->
        <!--android:id="@+id/content_frame"-->
        <!--android:layout_width="match_parent"-->
        <!--android:layout_height="match_parent" />-->
    <!-- The navigation drawer -->
    <ListView android:id="@+id/left_drawer"
        android:layout_width="240dp"
        android:layout_height="match_parent"
        android:layout_gravity="start"
        android:choiceMode="singleChoice"
        android:divider="@android:color/transparent"
        android:dividerHeight="0dp"
        android:background="#111"
        android:textIsSelectable="false"

        />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <RelativeLayout
            android:layout_width="match_parent"
            android:background="#e7f8e3"
            android:layout_height="0dp"
            android:elevation="2dp"
            android:layout_weight="1"
            android:gravity="center_vertical"
            android:orientation="horizontal"
            android:visibility="gone">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="Swipe to post"
                android:gravity="center"
                android:textStyle="italic"

                />


            <Button
                android:visibility="gone"
                android:id="@+id/buttonCheck"
                style="?android:attr/buttonStyleSmall"
                android:background="@drawable/camera"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="right"
                android:onClick="color_check"
                android:layout_alignParentTop="true"
                android:layout_alignParentEnd="true" />
            <!-- The navigation drawer -->

            <!--<ListView android:id="@+id/left_drawer"-->
            <!--android:layout_width="240dp"-->
            <!--android:layout_height="match_parent"-->
            <!--android:layout_gravity="start"-->
            <!--android:choiceMode="singleChoice"-->
            <!--android:divider="@android:color/transparent"-->
            <!--android:dividerHeight="0dp"-->
            <!--android:background="#111"/>-->


        </RelativeLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="0.1"

            android:gravity="center">

            <!--<SurfaceView
                android:id="@+id/surfaceView"
                android:layout_width="match_parent"
                android:layout_height="match_parent" />-->

            <com.example.jess.drawingtest.AutoFitTextureView
                android:id="@+id/texture"
                android:layout_width="1dp"
                android:layout_height="1dp"

                />

        </LinearLayout>




        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="7.8"
            android:layout_marginBottom="@dimen/activity_vertical_margin"
            android:orientation="vertical">

            <ScrollView
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <GridView
                    android:id="@+id/gridviewGallery"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:horizontalSpacing="0dp"
                    android:numColumns="5"
                    android:verticalSpacing="0dp"
                    android:visibility="gone">
                </GridView>

            </ScrollView>

            <com.example.jess.drawingtest.DrawingView
                android:id="@+id/drawing"
                android:layout_width="match_parent"
                android:layout_height="fill_parent"
                android:background="#ffffff" />
        </LinearLayout>

        <LinearLayout
            android:layout_height="50dp"
            android:layout_width="match_parent"
            android:gravity="center"
            android:background="#111"
            android:elevation="10dp"
            android:orientation="horizontal">

            <Button
                android:id="@+id/new_btn"

                android:layout_margin="10dp"
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:contentDescription="@string/start_new"
                android:background="@drawable/newpage"/>


            <Button
                android:id="@+id/draw_btn"

                android:padding="10dp"
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:contentDescription="@string/brush"
                android:background="@drawable/brush"/>

            <Button
                android:id="@+id/erase_btn"

                android:layout_margin="10dp"
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:contentDescription="@string/erase"
                android:background="@drawable/eraser"/>
            <Button
                android:id="@+id/col_btn"

                android:layout_margin="10dp"
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:background="@drawable/color"/>

            <Button
                android:id="@+id/gal_btn"

                android:layout_margin="8dp"
                android:adjustViewBounds="true"
                android:scaleType="fitCenter"
                android:layout_gravity="center"
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:background="@drawable/gallery" />

            <Button
                android:id="@+id/grab_btn"

                android:layout_margin="10dp"
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:contentDescription="@string/erase"
                android:background="@drawable/grab"/>
            <Button
                android:id="@+id/pan_btn"

                android:layout_margin="10dp"
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:background="@drawable/move"/>

            <Button
                android:id="@+id/del_btn"

                android:layout_margin="8dp"
                android:adjustViewBounds="true"
                android:scaleType="fitCenter"
                android:layout_gravity="center"
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:background="@drawable/delete" />







            <Button
                android:visibility="gone"
                android:id="@+id/save_btn"
                android:layout_margin="10dp"
                android:layout_width="20dp"
                android:layout_height="20dp"

                android:contentDescription="@string/save"
                android:background="@drawable/save"/>

            <Button
                android:visibility="gone"
                android:id="@+id/upload_btn"
                android:layout_margin="10dp"
                android:layout_width="20dp"
                android:layout_height="20dp"

                android:contentDescription="@string/upload"
                android:onClick="ipAdd"
                android:background="@drawable/upload" />

        </LinearLayout>
        <LinearLayout
            android:visibility="gone"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_gravity="center"
            android:layout_weight="1.5"
            android:orientation="vertical">

            <!-- Top Row -->
            <LinearLayout
                android:id="@+id/paint_colors"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <ImageButton
                    android:layout_width="@dimen/large_brush"
                    android:layout_height="@dimen/large_brush"
                    android:layout_margin="2dp"
                    android:background="#FF660000"
                    android:contentDescription="@string/paint"
                    android:onClick="paintClicked"
                    android:src="@drawable/paint"
                    android:tag="#FF660000" />

                <ImageButton
                    android:layout_width="@dimen/large_brush"
                    android:layout_height="@dimen/large_brush"
                    android:layout_margin="2dp"
                    android:background="#FFFF0000"
                    android:contentDescription="@string/paint"
                    android:onClick="paintClicked"
                    android:src="@drawable/paint"
                    android:tag="#FFFF0000" />

                <ImageButton
                    android:layout_width="@dimen/large_brush"
                    android:layout_height="@dimen/large_brush"
                    android:layout_margin="2dp"
                    android:background="#FFFF6600"
                    android:contentDescription="@string/paint"
                    android:onClick="paintClicked"
                    android:src="@drawable/paint"
                    android:tag="#FFFF6600" />

                <ImageButton
                    android:layout_width="@dimen/large_brush"
                    android:layout_height="@dimen/large_brush"
                    android:layout_margin="2dp"
                    android:background="#FFFFCC00"
                    android:contentDescription="@string/paint"
                    android:onClick="paintClicked"
                    android:src="@drawable/paint"
                    android:tag="#FFFFCC00" />

                <ImageButton
                    android:layout_width="@dimen/large_brush"
                    android:layout_height="@dimen/large_brush"
                    android:layout_margin="2dp"
                    android:background="#FF009900"
                    android:contentDescription="@string/paint"
                    android:onClick="paintClicked"
                    android:src="@drawable/paint"
                    android:tag="#FF009900" />

                <ImageButton
                    android:layout_width="@dimen/large_brush"
                    android:layout_height="@dimen/large_brush"
                    android:layout_margin="2dp"
                    android:background="#FF009999"
                    android:contentDescription="@string/paint"
                    android:onClick="paintClicked"
                    android:src="@drawable/paint"
                    android:tag="#FF009999" />
            </LinearLayout>
            <!-- Bottom Row -->
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <ImageButton
                    android:layout_width="@dimen/large_brush"
                    android:layout_height="@dimen/large_brush"
                    android:layout_margin="2dp"
                    android:background="#FF0000FF"
                    android:contentDescription="@string/paint"
                    android:onClick="paintClicked"
                    android:src="@drawable/paint"
                    android:tag="#FF0000FF" />

                <ImageButton
                    android:layout_width="@dimen/large_brush"
                    android:layout_height="@dimen/large_brush"
                    android:layout_margin="2dp"
                    android:background="#FF990099"
                    android:contentDescription="@string/paint"
                    android:onClick="paintClicked"
                    android:src="@drawable/paint"
                    android:tag="#FF990099" />

                <ImageButton
                    android:layout_width="@dimen/large_brush"
                    android:layout_height="@dimen/large_brush"
                    android:layout_margin="2dp"
                    android:background="#FFFF6666"
                    android:contentDescription="@string/paint"
                    android:onClick="paintClicked"
                    android:src="@drawable/paint"
                    android:tag="#FFFF6666" />

                <ImageButton
                    android:layout_width="@dimen/large_brush"
                    android:layout_height="@dimen/large_brush"
                    android:layout_margin="2dp"
                    android:background="#FFFFFFFF"
                    android:contentDescription="@string/paint"
                    android:onClick="paintClicked"
                    android:src="@drawable/paint"
                    android:tag="#FFFFFFFF" />

                <ImageButton
                    android:layout_width="@dimen/large_brush"
                    android:layout_height="@dimen/large_brush"
                    android:layout_margin="2dp"
                    android:background="#FF787878"
                    android:contentDescription="@string/paint"
                    android:onClick="paintClicked"
                    android:src="@drawable/paint"
                    android:tag="#FF787878" />

                <ImageButton
                    android:layout_width="@dimen/large_brush"
                    android:layout_height="@dimen/large_brush"
                    android:layout_margin="2dp"
                    android:background="#FF000000"
                    android:contentDescription="@string/paint"
                    android:onClick="paintClicked"
                    android:src="@drawable/paint"
                    android:tag="#FF000000" />
            </LinearLayout>
        </LinearLayout>

    </LinearLayout>




</android.support.v4.widget.DrawerLayout>
